<resources>
    <string name="app_name">RunShare</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyAymdWK_9DnHXKY19cuUvg0oMo_FItNvQ0</string>

    <string name="title_activity_running">RunningActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- 하울스타그램 참고-->
    <!-- Account -->
    <string name="post">게시물</string>
    <string name="following">팔로잉</string>
    <string name="follower">팔로워</string>
    <string name="follow">팔로우</string>
    <string name="follow_cancel">팔로우 취소</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>

    <!-- 회원가입 string-->
    <string name="join_name">Join</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="passwordCheck">PasswordCheck</string>
    <string name="nickname">Nickname</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>

    <string name="error_discorrent_email">이메일을 확인해주세요.</string>
    <string name="txtInputInfoPWD">영문 대문자, 소문자, 숫자, 특수문자를 포함하여 8자 이상</string>
    <string name="txtInputInfoNick">영문 대문자, 소문자, 숫자를 포함하여 3~12자</string>
    <string name="txtInputInfoPWCHECK">비밀 번호를 확인하세요.</string>
    <string name="txtInputInfoEmail">정확한 이메일이 아닙니다.</string>
    <string name="txtInputInfoAge">나이를 입력하세요.</string>
    <string name="txtInputInfoGender">성별을 선택하세요.</string>

    <!--로그인-->
    <string name="loginError">아이디 또는 비밀번호를 다시 확인하세요.\n어플에 등록되지 않은 아이디이거나, 아이디 또는 비밀번호를 잘못 입력하였습니다.</string>

    <!-- Ted Permission -->
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
